--- a/src/partials/applications-user.html
+++ b/src/partials/applications-user.html
@@ -50,9 +50,9 @@
     <div class="catalog-item catalog-item_short-hover is-active">
       <div class="catalog-item_short-hover__top">
         <div class="catalog-item__person">
-          <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+          <div class="catalog-item__img js-tooltip-btn" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
             <div class="catalog-item__img-icon is-active"><i class="fa fa-check"></i></div>
-            <div class="catalog-item__tooltip is-active">Волонтер, прикрепивший паспорт</div>
+            <div class="tooltip js-tooltip is-active">Волонтер, прикрепивший паспорт</div>
           </div>
           <div class="catalog-item__name">Алексей Д. М.</div>
         </div>        
@@ -65,18 +65,18 @@
           </a>
         </div>
         <div class="catalog-item__rating">
-          <div class="catalog-item__rating-block">
+          <div class="catalog-item__rating-block js-tooltip-btn">
             <a href="#">
               <img src="img/svg-icons/tablet-check.svg" alt="" width="16" height="20">
               <span>12</span>
-              <span class="tooltip">Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</span>
+              <span class="tooltip js-tooltip">Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor. Lorem ipsum dolor.</span>
             </a>
           </div>
-          <div class="catalog-item__rating-block">
+          <div class="catalog-item__rating-block js-tooltip-btn">
             <a href="#">
               <img src="img/svg-icons/thumb-up.svg" alt="" width="21" height="20">
               <span>12</span>
-              <span class="tooltip">Lorem ipsum dolor.</span>
+              <span class="tooltip js-tooltip">Lorem ipsum dolor.</span>
             </a>
           </div>
         </div>
@@ -108,9 +108,9 @@
     <div class="catalog-item catalog-item_short-hover">
       <div class="catalog-item_short-hover__top">
         <div class="catalog-item__person">
-          <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+          <div class="catalog-item__img js-tooltip-btn" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
             <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
+            <div class="tooltip js-tooltip">Волонтер, прикрепивший паспорт</div>
           </div>
           <div class="catalog-item__name">Алексей Д. М.</div>
         </div>
@@ -264,9 +264,9 @@
     <div class="catalog-item catalog-item_short-hover is-active has-button is-last">
       <div class="catalog-item_short-hover__top">
         <div class="catalog-item__person">
-          <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+          <div class="catalog-item__img js-tooltip-btn" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
             <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
+            <div class="tooltip js-tooltip">Волонтер, прикрепивший паспорт</div>
           </div>
           <div class="catalog-item__name">Алексей Д. М.</div>
         </div>
@@ -433,9 +433,9 @@
     <div class="catalog-item catalog-item_short-hover is-active">
       <div class="catalog-item_short-hover__top">
         <div class="catalog-item__person">
-          <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+          <div class="catalog-item__img js-tooltip-btn" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
             <div class="catalog-item__img-icon is-active"><i class="fa fa-check"></i></div>
-            <div class="catalog-item__tooltip is-active">Волонтер, прикрепивший паспорт</div>
+            <div class="tooltip js-tooltip is-active">Волонтер, прикрепивший паспорт</div>
           </div>
           <div class="catalog-item__name">Алексей Д. М.</div>
         </div>        
@@ -448,18 +448,18 @@
           </a>
         </div>
         <div class="catalog-item__rating">
-          <div class="catalog-item__rating-block">
+          <div class="catalog-item__rating-block js-tooltip-btn">
             <a href="#">
               <img src="img/svg-icons/tablet-check.svg" alt="" width="16" height="20">
               <span>12</span>
-              <span class="tooltip">Lorem ipsum dolor.</span>
+              <span class="tooltip js-tooltip">Lorem ipsum dolor.</span>
             </a>
           </div>
-          <div class="catalog-item__rating-block">
+          <div class="catalog-item__rating-block js-tooltip-btn">
             <a href="#">
               <img src="img/svg-icons/thumb-up.svg" alt="" width="21" height="20">
               <span>12</span>
-              <span class="tooltip">Lorem ipsum dolor.</span>
+              <span class="tooltip js-tooltip">Lorem ipsum dolor.</span>
             </a>
           </div>
         </div>
@@ -492,9 +492,9 @@
     <div class="catalog-item catalog-item_short-hover">
       <div class="catalog-item_short-hover__top">
         <div class="catalog-item__person">
-          <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+          <div class="catalog-item__img js-tooltip-btn" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
             <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
+            <div class="tooltip js-tooltip">Волонтер, прикрепивший паспорт</div>
           </div>
           <div class="catalog-item__name">Алексей Д. М.</div>
         </div>
@@ -647,9 +647,9 @@
     <div class="catalog-item catalog-item_short-hover is-active has-button is-last">
       <div class="catalog-item_short-hover__top">
         <div class="catalog-item__person">
-          <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+          <div class="catalog-item__img js-tooltip-btn" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
             <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
+            <div class="tooltip js-tooltip">Волонтер, прикрепивший паспорт</div>
           </div>
           <div class="catalog-item__name">Алексей Д. М.</div>
         </div>
@@ -816,9 +816,9 @@
     <div class="catalog-item catalog-item_short-hover is-active">
       <div class="catalog-item_short-hover__top">
         <div class="catalog-item__person">
-          <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+          <div class="catalog-item__img js-tooltip-btn" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
             <div class="catalog-item__img-icon is-active"><i class="fa fa-check"></i></div>
-            <div class="catalog-item__tooltip is-active">Волонтер, прикрепивший паспорт</div>
+            <div class="tooltip js-tooltip is-active">Волонтер, прикрепивший паспорт</div>
           </div>
           <div class="catalog-item__name">Алексей Д. М.</div>
         </div>        
@@ -831,18 +831,18 @@
           </a>
         </div>
         <div class="catalog-item__rating">
-          <div class="catalog-item__rating-block">
+          <div class="catalog-item__rating-block js-tooltip-btn">
             <a href="#">
               <img src="img/svg-icons/tablet-check.svg" alt="" width="16" height="20">
               <span>12</span>
-              <span class="tooltip">Lorem ipsum dolor.</span>
+              <span class="tooltip js-tooltip">Lorem ipsum dolor.</span>
             </a>
           </div>
-          <div class="catalog-item__rating-block">
+          <div class="catalog-item__rating-block js-tooltip-btn">
             <a href="#">
               <img src="img/svg-icons/thumb-up.svg" alt="" width="21" height="20">
               <span>12</span>
-              <span class="tooltip">Lorem ipsum dolor.</span>
+              <span class="tooltip js-tooltip">Lorem ipsum dolor.</span>
             </a>
           </div>
         </div>
@@ -875,9 +875,9 @@
     <div class="catalog-item catalog-item_short-hover">
       <div class="catalog-item_short-hover__top">
         <div class="catalog-item__person">
-          <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+          <div class="catalog-item__img js-tooltip-btn" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
             <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
+            <div class="tooltip js-tooltip">Волонтер, прикрепивший паспорт</div>
           </div>
           <div class="catalog-item__name">Алексей Д. М.</div>
         </div>
@@ -1030,9 +1030,9 @@
     <div class="catalog-item catalog-item_short-hover is-active has-button is-last">
       <div class="catalog-item_short-hover__top">
         <div class="catalog-item__person">
-          <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+          <div class="catalog-item__img js-tooltip-btn" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
             <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
+            <div class="tooltip js-tooltip">Волонтер, прикрепивший паспорт</div>
           </div>
           <div class="catalog-item__name">Алексей Д. М.</div>
         </div>
