--- a/src/partials/applications.html
+++ b/src/partials/applications.html
@@ -32,9 +32,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon is-active"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip is-active">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip is-active">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -106,9 +106,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -180,9 +180,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -254,9 +254,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -328,9 +328,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -406,9 +406,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -480,9 +480,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -554,9 +554,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -628,9 +628,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -702,9 +702,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -780,9 +780,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -854,9 +854,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -928,9 +928,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -1002,9 +1002,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
@@ -1076,9 +1076,9 @@
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-show-link">Читать Далее</a>
         <a href="#" class="request-item_big__link request-item_big__link-in-text js-hide-link">Скрыть</a>
         <div class="request-item__person">
-          <div class="request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+          <div class="request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
             <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-            <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+            <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
           </div>
           <div class="request-item__person-name">
             Алексей Д. М.
