--- a/src/partials/catalog-list.html
+++ b/src/partials/catalog-list.html
@@ -12,9 +12,9 @@
   <!-- begin catalog-item -->
   <div class="catalog-item js-open-popup" data-link="popup-catalog">
     <div class="catalog-item__person">
-      <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+      <div class="catalog-item__img js-tooltip-btn" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
         <div class="catalog-item__img-icon is-active"><i class="fa fa-check"></i></div>
-        <div class="catalog-item__tooltip is-active">Волонтер, прикрепивший паспорт</div>
+        <div class="tooltip js-tooltip is-active">Волонтер, прикрепивший паспорт</div>
       </div>
       <div class="catalog-item__name">Антон Дубовицкий</div>
     </div>
@@ -74,9 +74,9 @@
   <!-- begin catalog-item -->
   <div class="catalog-item js-open-popup" data-link="popup-catalog">
     <div class="catalog-item__person">
-      <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+      <div class="catalog-item__img js-tooltip-btn" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
         <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
-        <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
+        <div class="tooltip js-tooltip">Волонтер, прикрепивший паспорт</div>
       </div>
       <div class="catalog-item__name">Иван Иванов</div>
     </div>
@@ -134,9 +134,9 @@
   <!-- begin catalog-item -->
   <div class="catalog-item js-open-popup" data-link="popup-catalog">
     <div class="catalog-item__person">
-      <div class="catalog-item__img" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
+      <div class="catalog-item__img js-tooltip-btn" style="background-image: url('img/volonter/user/user-catalog-1.jpg');">
         <div class="catalog-item__img-icon"><i class="fa fa-check"></i></div>
-        <div class="catalog-item__tooltip">Волонтер, прикрепивший паспорт</div>
+        <div class="tooltip js-tooltip">Волонтер, прикрепивший паспорт</div>
       </div>
       <div class="catalog-item__name">Иван Иванов</div>
     </div>
