--- a/src/partials/popups-volonter.html
+++ b/src/partials/popups-volonter.html
@@ -76,9 +76,9 @@
         <!-- begin feedback -->
         <div class="feedback">
           <div class="feedback__person request-item__person">
-            <div class="feedback__person-img request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="feedback__person-img request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
               <div class="request-item__img-icon is-active"><i class="fa fa-check"></i></div>
-              <div class="request-item__tooltip is-active">Lorem ipsum dolor.</div>
+              <div class="tooltip js-tooltip is-active">Lorem ipsum dolor.</div>
             </div>
             <div class="feedback__person-name">
               Алексей Д. М.
@@ -93,9 +93,9 @@
         <!-- begin feedback -->
         <div class="feedback">
           <div class="feedback__person request-item__person">
-            <div class="feedback__person-img request-item__person-img" style="background-image: url('img/volonter/user/user-1.jpg');">
+            <div class="feedback__person-img request-item__person-img js-tooltip-btn" style="background-image: url('img/volonter/user/user-1.jpg');">
               <div class="request-item__img-icon"><i class="fa fa-check"></i></div>
-              <div class="request-item__tooltip">Lorem ipsum dolor.</div>
+              <div class="tooltip js-tooltip">Lorem ipsum dolor.</div>
             </div>
             <div class="feedback__person-name">
               Алексей Д. М.
