--- a/src/sass/new-styles-2/_request.sass
+++ b/src/sass/new-styles-2/_request.sass
@@ -86,6 +86,7 @@
     align-items: center
     margin-bottom: 35px
     cursor: pointer
+
     +r3
       margin-bottom: 35px
   &__person-img
@@ -94,8 +95,12 @@
     height: 50px
     border-radius: 50%
     position: relative
+    .tooltip
+      +tooltip
+      left: -14px
+      transform: translate(0, 0)
     +hover
-      .request-item__tooltip
+      .tooltip
         &.is-active
           display: block
   &__img-icon
@@ -115,19 +120,22 @@
       vertical-align: middle
     &.is-active
       display: block
-  &__tooltip
-    position: absolute
-    top: -54px
-    left: -14px
-    padding: 10px 15px
-    background-color: #fff
-    min-width: 230px
-    color: #353535
-    font-size: 12px
-    border: 1px solid $gray
-    border-radius: 3px
-    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2)
-    display: none
+  // &__tooltip
+  //   position: absolute
+  //   bottom: calc(100% + 12px)
+  //   left: -14px
+  //   padding: 10px 15px
+  //   background-color: #fff
+  //   min-width: 230px
+  //   color: #353535
+  //   font-size: 12px
+  //   border: 1px solid $gray
+  //   border-radius: 3px
+  //   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2)
+  //   display: none
+    &.is-bottom
+      bottom: auto
+      top: calc(100% + 12px)
   &__person-name
     font-size: 14px
     padding-left: 13px
