--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -303,7 +303,8 @@ $gray: #d8d8d8
   font-size: 11px
   +reg
   text-transform: uppercase
-  letter-spacing: .05em
+  letter-spacing: .08em
+  line-height: 2
   display: block
 
 .feedback
@@ -332,7 +333,8 @@ $gray: #d8d8d8
       font-size: 11px
       +reg
       text-transform: uppercase
-      letter-spacing: .05em
+      letter-spacing: .08em
+      line-height: 2
       display: block
   &__text
     font-size: 14px
@@ -490,6 +492,8 @@ $gray: #d8d8d8
     margin-bottom: 19px
   ul
     font-size: 0
+    padding-left: 20px
+
   li
     margin-bottom: 21px
     position: relative
@@ -525,7 +529,7 @@ $gray: #d8d8d8
 
 .profile-menu-mob
   display: none
-  margin-bottom: 22px
+  margin-bottom: 22px  
   .select__text
     font-size: 18px
     +med
@@ -536,7 +540,7 @@ $gray: #d8d8d8
   +r1
     display: block
   +r3
-    margin-bottom: 15px
+    margin-bottom: 30px
 
 .map-tags
   font-size: 0
