--- a/src/partials/applications-user.html
+++ b/src/partials/applications-user.html
@@ -93,7 +93,7 @@
         <div class="catalog-item_short-hover__options-text">Свяжитесь с ним и договоритесь о помощи!</div>
         <div class="catalog-item_short-hover__controls">
           <a href="#" class="catalog-item_short-hover__control js-open-popup" data-link="popup-account-user-1">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="20" viewBox="0 0 24 20"><defs><path id="nrtza" d="M499 4259h23.33v19.95H499z"/><path id="nrtzc" d="M519.09 4259a3.26 3.26 0 0 1 3.24 3.26v9.31c0 1.8-1.45 3.26-3.24 3.26h-.86v3.65a.48.48 0 0 1-.47.47.47.47 0 0 1-.31-.1l-4.73-4.02h-10.48a3.26 3.26 0 0 1-3.24-3.26v-9.3c0-1.8 1.46-3.27 3.24-3.27h16.85m-.8 11.43c.27 0 .48-.21.48-.48a.47.47 0 0 0-.48-.47h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25"/><clipPath id="nrtzb"><use xlink:href="#nrtza"/></clipPath></defs><g><g transform="translate(-499 -4259)"><g/><g clip-path="url(#nrtzb)"><use fill="#9b9b9b" xlink:href="#nrtzc"/></g></g></g></svg>
+            <img src="img/svg-icons/comment.svg" alt="" width="24" height="20">
             <span>Добавить отзыв</span>
           </a>
           <a href="#" class="catalog-item_short-hover__control js-open-popup" data-link="popup-account-user-2">
@@ -140,7 +140,7 @@
         <div class="catalog-item_short-hover__options-text">Свяжитесь с ним и договоритесь о помощи!</div>
         <div class="catalog-item_short-hover__controls">
           <a href="#" class="catalog-item_short-hover__control js-open-popup" data-link="popup-account-user-1">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="20" viewBox="0 0 24 20"><defs><path id="nrtza" d="M499 4259h23.33v19.95H499z"/><path id="nrtzc" d="M519.09 4259a3.26 3.26 0 0 1 3.24 3.26v9.31c0 1.8-1.45 3.26-3.24 3.26h-.86v3.65a.48.48 0 0 1-.47.47.47.47 0 0 1-.31-.1l-4.73-4.02h-10.48a3.26 3.26 0 0 1-3.24-3.26v-9.3c0-1.8 1.46-3.27 3.24-3.27h16.85m-.8 11.43c.27 0 .48-.21.48-.48a.47.47 0 0 0-.48-.47h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25"/><clipPath id="nrtzb"><use xlink:href="#nrtza"/></clipPath></defs><g><g transform="translate(-499 -4259)"><g/><g clip-path="url(#nrtzb)"><use fill="#9b9b9b" xlink:href="#nrtzc"/></g></g></g></svg>
+            <img src="img/svg-icons/comment.svg" alt="" width="24" height="20">
             <span>Добавить отзыв</span>
           </a>
           <a href="#" class="catalog-item_short-hover__control js-open-popup" data-link="popup-account-user-2">
@@ -300,9 +300,9 @@
       <div class="request-item_big__title">
         <h4 class="h4 h4_md">Подвезти на машине</h4>
       </div>
-      <div class="request-item_big__link">
+      <!-- <div class="request-item_big__link">
         <a href="#">Ссылка на конкретную заявку</a>
-      </div>
+      </div> -->
     </div>
 
     <div class="request-item_big__block">
@@ -344,9 +344,9 @@
       <div class="request-item_big__title">
         <h4 class="h4 h4_md">Подвезти на машине</h4>
       </div>
-      <div class="request-item_big__link">
+      <!-- <div class="request-item_big__link">
         <a href="#">Ссылка на конкретную заявку</a>
-      </div>
+      </div> -->
     </div>
 
     <div class="request-item_big__block">
@@ -477,7 +477,7 @@
         <div class="catalog-item_short-hover__options-text">Свяжитесь с ним и договоритесь о помощи!</div>
         <div class="catalog-item_short-hover__controls">
           <a href="#" class="catalog-item_short-hover__control js-open-popup" data-link="popup-account-user-1">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="20" viewBox="0 0 24 20"><defs><path id="nrtza" d="M499 4259h23.33v19.95H499z"/><path id="nrtzc" d="M519.09 4259a3.26 3.26 0 0 1 3.24 3.26v9.31c0 1.8-1.45 3.26-3.24 3.26h-.86v3.65a.48.48 0 0 1-.47.47.47.47 0 0 1-.31-.1l-4.73-4.02h-10.48a3.26 3.26 0 0 1-3.24-3.26v-9.3c0-1.8 1.46-3.27 3.24-3.27h16.85m-.8 11.43c.27 0 .48-.21.48-.48a.47.47 0 0 0-.48-.47h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25"/><clipPath id="nrtzb"><use xlink:href="#nrtza"/></clipPath></defs><g><g transform="translate(-499 -4259)"><g/><g clip-path="url(#nrtzb)"><use fill="#9b9b9b" xlink:href="#nrtzc"/></g></g></g></svg>
+            <img src="img/svg-icons/comment.svg" alt="" width="24" height="20">
             <span>Добавить отзыв</span>
           </a>
           <a href="#" class="catalog-item_short-hover__control js-open-popup" data-link="popup-account-user-2">
@@ -524,7 +524,7 @@
         <div class="catalog-item_short-hover__options-text">Свяжитесь с ним и договоритесь о помощи!</div>
         <div class="catalog-item_short-hover__controls">
           <a href="#" class="catalog-item_short-hover__control js-open-popup" data-link="popup-account-user-1">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="20" viewBox="0 0 24 20"><defs><path id="nrtza" d="M499 4259h23.33v19.95H499z"/><path id="nrtzc" d="M519.09 4259a3.26 3.26 0 0 1 3.24 3.26v9.31c0 1.8-1.45 3.26-3.24 3.26h-.86v3.65a.48.48 0 0 1-.47.47.47.47 0 0 1-.31-.1l-4.73-4.02h-10.48a3.26 3.26 0 0 1-3.24-3.26v-9.3c0-1.8 1.46-3.27 3.24-3.27h16.85m-.8 11.43c.27 0 .48-.21.48-.48a.47.47 0 0 0-.48-.47h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25"/><clipPath id="nrtzb"><use xlink:href="#nrtza"/></clipPath></defs><g><g transform="translate(-499 -4259)"><g/><g clip-path="url(#nrtzb)"><use fill="#9b9b9b" xlink:href="#nrtzc"/></g></g></g></svg>
+            <img src="img/svg-icons/comment.svg" alt="" width="24" height="20">
             <span>Добавить отзыв</span>
           </a>
           <a href="#" class="catalog-item_short-hover__control js-open-popup" data-link="popup-account-user-2">
@@ -683,9 +683,9 @@
       <div class="request-item_big__title">
         <h4 class="h4 h4_md">Подвезти на машине</h4>
       </div>
-      <div class="request-item_big__link">
+      <!-- <div class="request-item_big__link">
         <a href="#">Ссылка на конкретную заявку</a>
-      </div>
+      </div> -->
     </div>
 
     <div class="request-item_big__block">
@@ -727,9 +727,9 @@
       <div class="request-item_big__title">
         <h4 class="h4 h4_md">Подвезти на машине</h4>
       </div>
-      <div class="request-item_big__link">
+      <!-- <div class="request-item_big__link">
         <a href="#">Ссылка на конкретную заявку</a>
-      </div>
+      </div> -->
     </div>
 
     <div class="request-item_big__block">
@@ -860,7 +860,7 @@
         <div class="catalog-item_short-hover__options-text">Свяжитесь с ним и договоритесь о помощи!</div>
         <div class="catalog-item_short-hover__controls">
           <a href="#" class="catalog-item_short-hover__control js-open-popup" data-link="popup-account-user-1">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="20" viewBox="0 0 24 20"><defs><path id="nrtza" d="M499 4259h23.33v19.95H499z"/><path id="nrtzc" d="M519.09 4259a3.26 3.26 0 0 1 3.24 3.26v9.31c0 1.8-1.45 3.26-3.24 3.26h-.86v3.65a.48.48 0 0 1-.47.47.47.47 0 0 1-.31-.1l-4.73-4.02h-10.48a3.26 3.26 0 0 1-3.24-3.26v-9.3c0-1.8 1.46-3.27 3.24-3.27h16.85m-.8 11.43c.27 0 .48-.21.48-.48a.47.47 0 0 0-.48-.47h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25"/><clipPath id="nrtzb"><use xlink:href="#nrtza"/></clipPath></defs><g><g transform="translate(-499 -4259)"><g/><g clip-path="url(#nrtzb)"><use fill="#9b9b9b" xlink:href="#nrtzc"/></g></g></g></svg>
+            <img src="img/svg-icons/comment.svg" alt="" width="24" height="20">
             <span>Добавить отзыв</span>
           </a>
           <a href="#" class="catalog-item_short-hover__control js-open-popup" data-link="popup-account-user-2">
@@ -907,7 +907,7 @@
         <div class="catalog-item_short-hover__options-text">Свяжитесь с ним и договоритесь о помощи!</div>
         <div class="catalog-item_short-hover__controls">
           <a href="#" class="catalog-item_short-hover__control js-open-popup" data-link="popup-account-user-1">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="20" viewBox="0 0 24 20"><defs><path id="nrtza" d="M499 4259h23.33v19.95H499z"/><path id="nrtzc" d="M519.09 4259a3.26 3.26 0 0 1 3.24 3.26v9.31c0 1.8-1.45 3.26-3.24 3.26h-.86v3.65a.48.48 0 0 1-.47.47.47.47 0 0 1-.31-.1l-4.73-4.02h-10.48a3.26 3.26 0 0 1-3.24-3.26v-9.3c0-1.8 1.46-3.27 3.24-3.27h16.85m-.8 11.43c.27 0 .48-.21.48-.48a.47.47 0 0 0-.48-.47h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25m0-3.05c.27 0 .48-.21.48-.47a.47.47 0 0 0-.48-.48h-15.25a.47.47 0 0 0-.47.48c0 .26.2.47.47.47h15.25"/><clipPath id="nrtzb"><use xlink:href="#nrtza"/></clipPath></defs><g><g transform="translate(-499 -4259)"><g/><g clip-path="url(#nrtzb)"><use fill="#9b9b9b" xlink:href="#nrtzc"/></g></g></g></svg>
+            <img src="img/svg-icons/comment.svg" alt="" width="24" height="20">
             <span>Добавить отзыв</span>
           </a>
           <a href="#" class="catalog-item_short-hover__control js-open-popup" data-link="popup-account-user-2">
@@ -1066,9 +1066,9 @@
       <div class="request-item_big__title">
         <h4 class="h4 h4_md">Подвезти на машине</h4>
       </div>
-      <div class="request-item_big__link">
+      <!-- <div class="request-item_big__link">
         <a href="#">Ссылка на конкретную заявку</a>
-      </div>
+      </div> -->
     </div>
 
     <div class="request-item_big__block">
@@ -1110,9 +1110,9 @@
       <div class="request-item_big__title">
         <h4 class="h4 h4_md">Подвезти на машине</h4>
       </div>
-      <div class="request-item_big__link">
+      <!-- <div class="request-item_big__link">
         <a href="#">Ссылка на конкретную заявку</a>
-      </div>
+      </div> -->
     </div>
 
     <div class="request-item_big__block">
