--- a/src/sass/new-styles-2/_applications.sass
+++ b/src/sass/new-styles-2/_applications.sass
@@ -36,12 +36,12 @@
         margin-right: 20px
         margin-left: 0
     +r3
-      padding-top: 49px
+      padding-top: 36px
       .filter-tags
         display: flex
         justify-content: flex-start
         flex-direction: column
-      .filter-tag
+      .filter-tag__wrap
         &:nth-child(3)
           order: 1
         &:nth-child(1)
