--- a/src/sass/new-styles-2/_hero.sass
+++ b/src/sass/new-styles-2/_hero.sass
@@ -42,7 +42,7 @@
     +r3
       margin-left: auto
       margin-right: auto
-      margin-bottom: 0
+      margin-bottom: 30px
   &__btn
     float: left
     min-width: 220px
@@ -66,7 +66,7 @@
     +r2
       margin-bottom: 92px
     +r3
-      margin-bottom: 53px
+      margin-bottom: 30px
   &__support
     color: $text
     font-size: 12px
@@ -81,6 +81,7 @@
       margin-right: auto
       font-size: 10px
       max-width: 260px
+      text-align: left
     img
       float: left
     p
@@ -88,3 +89,5 @@
       width: calc(100% - 40px)
       padding-left: 19px
       padding-top: 9px
+      +r3
+        padding-top: 4px
