--- a/src/sass/new-styles-2/_how.sass
+++ b/src/sass/new-styles-2/_how.sass
@@ -9,8 +9,8 @@
     margin-bottom: 48px
     +r2
       margin-bottom: 30px
-    +r3
-      margin-bottom: 49px
+    // +r3
+    //   margin-bottom: 30px
 
 .how-tabs
   &__tabs
