--- a/src/sass/new-styles-2/_request.sass
+++ b/src/sass/new-styles-2/_request.sass
@@ -6,11 +6,15 @@
     padding-bottom: 59px
   +r3
     padding-top: 34px
+    padding-bottom: 43px
   &__title
     text-align: center
     margin-bottom: 67px
     +r3
       margin-bottom: 33px
+      max-width: 255px
+      margin-left: auto
+      margin-right: auto
   &__filter-tags
     margin-bottom: 31px
     +r3
@@ -147,7 +151,8 @@
       font-size: 11px
       +reg
       text-transform: uppercase
-      letter-spacing: .05em
+      letter-spacing: .08em
+      line-height: 2
       display: block
   &__contact
     font-size: 14px
@@ -322,6 +327,8 @@
           font-size: 16px
           max-width: 200px
           display: none
+          +r3
+            max-width: none
     &__descr
       font-size: 14px
       color: $text
@@ -476,6 +483,8 @@
     padding-right: 40px
     margin-bottom: 20px
     padding-bottom: 25px
+    border: none
+    box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1)
     +r3
       padding-bottom: 30px
       padding-left: 20px
@@ -501,7 +510,7 @@
     .request-item__contacts-field
       float: left
       &:first-child
-        margin-right: 74px
+        margin-right: 50px
         +r4
           margin-right: 0
     .request-item_big__block
@@ -512,6 +521,8 @@
         align-items: flex-start
     .request-item__btn
       min-width: 220px
+      +r2
+        min-width: 180px
       +r3
         width: 100%
 
