--- a/src/sass/new-styles-2/_service-menu.sass
+++ b/src/sass/new-styles-2/_service-menu.sass
@@ -7,7 +7,10 @@
       border-top: 1px solid #e6e6e6
       padding-top: 12px
       padding-bottom: 11px 
-      padding-left: 60px     
+      padding-left: 60px
+      small
+        padding: 0 9px
+        font-size: 18px  
       &.is-active
         background-image: linear-gradient(180deg, #ffa461 0%, #f67e25 100%)
         color: #fff
@@ -19,7 +22,7 @@
       a
         padding-top: 12px
         padding-bottom: 11px
-        padding-left: 60px
+        padding-left: 75px
         font-size: 18px
         +reg
         &.is-active
