--- a/src/partials/footer-warning.html
+++ b/src/partials/footer-warning.html
@@ -1,9 +1,9 @@
-<footer class="footer">
+<footer class="footer footer_mob-small">
   <div class="footer__warning">
     <div class="container container_whider"><p>Внимание! "DISLIFE. Люди помогают людям" – открытая площадка, воспользоваться которой может каждый желающий. Мы не знаем пользователей лично и не несем ответственность за их действия. Будьте внимательны и не идите на личный контакт, если у вас нет уверенности в человеке.</p></div>
   </div>
   <div class="footer__bottom">
-    <div class="container">
+    <div class="container container_whider">
       <ul class="footer__social">
         <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
         <li><a href="#"><i class="fa fa-twitter-square"></i></a></li>
