--- a/src/sass/new-style-2.sass
+++ b/src/sass/new-style-2.sass
@@ -230,6 +230,44 @@ $gray: #d8d8d8
       padding-bottom: 14px
     +r3
       display: none
+  &_mob-small
+    .footer__bottom
+      .container
+        +clr
+        +r3
+          padding-top: 13px
+      +r2
+        padding-top: 0
+        padding-bottom: 16px
+      +r3
+        padding-bottom: 11px
+    .footer__social
+      +r2
+        a
+          i
+            font-size: 24px
+        li
+          padding: 0
+          padding-left: 10px
+      +r3
+        float: left
+        margin-bottom: 0
+    .footer__copy
+      +r2
+        p
+          font-size: 13px
+          text-transform: uppercase
+          padding-right: 9px
+          padding-top: 3px
+      +r3
+        float: right
+    .footer__age
+      +r2
+        font-size: 12px
+        width: 20px
+        padding: 3px 0 4px
+          
+
 
 .select
   &_volonter
