--- a/src/sass/new-styles-2/_catalog.sass
+++ b/src/sass/new-styles-2/_catalog.sass
@@ -624,6 +624,8 @@
           text-decoration: none
       span
         text-decoration: underline
+        +r3
+          text-decoration: none
       svg, img
         display: inline-block
         margin-right: 10px
