--- a/src/sass/new-styles-2/_applications.sass
+++ b/src/sass/new-styles-2/_applications.sass
@@ -2,10 +2,12 @@
   &__item
     height: 0
     opacity: 0
+    overflow: hidden
     +tr(opacity .3s)
     &.is-active
       height: auto
       opacity: 1
+      overflow: visible
 
 .applications-section
   padding-top: 30px
