--- a/src/sass/new-styles-2/_request.sass
+++ b/src/sass/new-styles-2/_request.sass
@@ -322,6 +322,7 @@
       +r3
         width: 100%
         padding-left: 0
+        padding-bottom: 0
       .btn-full_grad-orange
         &.is-wait-btn
           font-size: 16px
@@ -359,6 +360,8 @@
       flex: 1
       padding-bottom: 33px     
       +med
+      +r3
+        padding-bottom: 0
       &.is-approved
         .request-item_big__approved-text
           display: block
@@ -433,6 +436,7 @@
         padding-left: 0
       +r3
         width: 100%
+        padding-top: 0
     .request-item__date, .request-item_big__approved-text
       width: 180px
       margin-left: auto
@@ -471,6 +475,8 @@
       .btn-full
         &:first-child
           margin-bottom: 20px
+          +r3
+            margin-bottom: 18px
       .catalog-item_short-hover__control
         display: none
         +r2
